style: fix audio component spacing

--- a/src/app/shared/components/template/components/audio/audio.component.scss
+++ b/src/app/shared/components/template/components/audio/audio.component.scss
@@ -53,12 +53,11 @@ $control-background: var(--audio-control-background, var(--ion-color-primary-500
     }
 
     ion-range::part(bar-active) {
-      top: 23px;
+      top: 4px;
       margin-left: 3px;
     }
   }
   .time {
-    margin-top: -12px;
     @include mixins.flex-space-between;
     &-value {
       font-size: var(--font-size-text-large);
